--- a/src/index.scss
+++ b/src/index.scss
@@ -93,6 +93,7 @@ input {
   user-select: none;
   padding-left: 20px;
   padding-right: 24px;
+  background-color: rgb(25, 0, 54);
   border-bottom: 0.3px solid rgba(128, 128, 128, 0.484);
   .name {
     display: flex;
@@ -148,7 +149,6 @@ input {
 
   .items {
     background-color: rgb(0, 0, 0);
-    margin-bottom: 12px;
     padding: 12px 11px;
     display: flex;
     justify-content: space-between;
@@ -164,6 +164,13 @@ input {
       }
     }
   }
+}
+
+div.dot {
+  height: 0.2px;
+  width: 5px;
+  position: absolute;
+  background-color: red;
 }
 
 progress {
