--- a/src/index.scss
+++ b/src/index.scss
@@ -38,15 +38,17 @@ input {
 
 .show-auths {
   min-height: 100vh;
+
   .auths {
-    padding-top: 32px;
     transition: margin ease 0.3s;
-    .while-long-press {
-      padding-left: 15px;
+
+    &.totps {
+      padding-top: 32px;
+    }
+    .auth-item {
       display: flex;
-      // width: 100%;
-      gap: 15px;
-      // justify-content: space-between;
+
+      border-bottom: 0.3px solid rgba(128, 128, 128, 0.484);
       align-items: center;
 
       .auth-box-1,
@@ -58,6 +60,9 @@ input {
         width: 22px;
         height: 22px;
         accent-color: rgb(0, 140, 221);
+        margin-right: 15px;
+        margin-left: 15px;
+        background-color: black;
       }
       // justify-content: center;
     }
@@ -93,7 +98,7 @@ input {
   user-select: none;
   padding-left: 20px;
   padding-right: 24px;
-  border-bottom: 0.3px solid rgba(128, 128, 128, 0.484);
+  // background-color: red;
   .name {
     display: flex;
     justify-content: space-between;
@@ -295,4 +300,101 @@ progress::-webkit-progress-value {
 }
 .hidden {
   display: none;
+}
+
+.new-create {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  align-items: center;
+  .my-bar {
+    margin-top: 10px;
+    width: 100%;
+    font-size: 20px;
+    padding: 18px 20px;
+    // border-bottom: 0.3px solid rgba(63, 63, 63, 0.541);
+    display: flex;
+    gap: 28px;
+    .icon {
+      color: rgb(0, 149, 255);
+    }
+  }
+
+  form {
+    flex-grow: 1;
+    width: 95%;
+    margin-top: 25px;
+    padding: 0 15px;
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+    gap: 24px;
+    // align-items: center;
+
+    input {
+      font-size: 19px;
+      padding: 12px 14px;
+    }
+    button {
+      padding: 11px 26px;
+      border: 0px;
+      background-color: rgb(0, 157, 255);
+      font-size: 20px;
+      margin-right: 20px;
+    }
+
+    .field {
+      display: flex;
+      margin-top: 12px;
+      padding-left: 16px;
+      gap: 20px;
+
+      input {
+        accent-color: rgb(0, 149, 255);
+        height: 20px;
+        width: 20px;
+      }
+    }
+  }
+  .flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    button {
+    }
+    .acc {
+      position: relative;
+      width: 180px;
+      .type {
+        position: absolute;
+        top: -5px;
+        font-size: 12px;
+        background-color: black;
+        color: rgb(0, 149, 255);
+        padding: 0px 6px;
+        left: 16px;
+      }
+      .head {
+        display: inline-block;
+        width: 100%;
+        padding: 18px 20px;
+        border: 1px solid rgb(12, 88, 159);
+        border-radius: 6px;
+      }
+      .body {
+        position: absolute;
+        border-radius: 6px;
+        padding: 8px 6px;
+        width: 100%;
+        gap: 5px;
+        background-color: rgb(41, 41, 41);
+        display: flex;
+        flex-direction: column;
+        top: calc(100% + 5px);
+        .item {
+          padding: 8px 10px;
+        }
+      }
+    }
+  }
 }
