--- a/src/index.scss
+++ b/src/index.scss
@@ -412,5 +412,6 @@ progress::-webkit-progress-value {
     background-color: rgb(0, 94, 255);
     border-radius: 4px;
     padding: 8px 12px;
+    cursor: pointer;
   }
 }
